--- a/css/options.css
+++ b/css/options.css
@@ -1,4 +1,3 @@
-/*** global ***/
 a {
 	color: blue;
 	text-decoration: none;
@@ -8,12 +7,9 @@ a:hover {
 }
 
 body {
-	font-family: sans-serif;
-	font-size: 13px;
-	line-height: 15px;
-	margin: 0 auto;
+	font: 13px/15px "DejaVu Sans", sans-serif; /* merge & dejavu & test */
+	margin: 10px auto;
 	max-width: 600px;
-	padding: 10px;
 }
 
 div {
