Much better update notification that also automatically hides after the first time it's shown
also some silly tweaks as usual...

--- a/css/popup.css
+++ b/css/popup.css
@@ -72,13 +72,18 @@ legend {
 	width: 8px;
 }
 #main-saved-list::-webkit-scrollbar-thumb {
-	background-color: #b2b2b2;
+	background-color: #B2B2B2;
 }
 #main-saved-list > div > a {
 	float: left;
 }
 #main-saved-list > div > span {
 	float: right;
+}
+
+#main-update {
+	background-color: #DDD;
+	display: none;
 }
 
 
