--- a/css/popup.css
+++ b/css/popup.css
@@ -2,7 +2,6 @@
 a {
 	color: blue;
 	cursor: pointer;
-	text-decoration: none;
 }
 a:hover {
 	text-decoration: underline;
@@ -12,10 +11,7 @@ a[title] {
 }
 
 body {
-	color: black;
-	font-family: Arial, sans-serif;
-	font-size: 11px;
-	line-height: 14px;
+	font: 11px/14px Arial, sans-serif;
 	margin: 5px 8px 0px 8px;
 	width: 300px;
 }
@@ -28,14 +24,13 @@ button + button {
 }
 
 fieldset {
-	border: 1px solid #b2b2b2;
+	border: 1px solid #B2B2B2;
 	margin: 0 2px 10px 2px;
 	padding: 2px 5px 4px 5px;
 }
 
 hr {
-	border: none;
-	border-top: 1px solid #b2b2b2;
+	border-top: 1px solid #B2B2B2;
 	margin: 5px auto;
 }
 
@@ -100,7 +95,7 @@ ul {
 
 /*** import view ***/
 #import-failed {
-	color: red;
+	color: #F00;
 	display: none;
 }
 
