Tweak some stuff and re-add export analytics

--- a/css/popup.css
+++ b/css/popup.css
@@ -103,6 +103,10 @@ ul {
 
 
 /*** import view ***/
+#import-file {
+	width: 0;
+}
+
 #import-message {
 	display: none;
 }
@@ -111,4 +115,9 @@ ul {
 /*** export view ***/
 #export > span, #confirm > span {
 	float: right;
+}
+
+#export-check {
+	color: #F00;
+	display: none;
 }
