Simplify session list html by using data- and ::after for tabcounts

--- a/popup.jade
+++ b/popup.jade
@@ -36,24 +36,12 @@ html(lang="en")
 		div.row
 			div.span4
 				ul.unstyled#list
-					li
-						a Start
-						span 7
-					li
-						a Scalable TD
-						span 8
-					li
-						a Article
-						span 14
-					li
-						a scalabletd2
-						span 5
-					li
-						a fooo
-						span 1
-					li
-						a heroku
-						span 7
+					li(data-tabcount="7"): a Start
+					li(data-tabcount="8"): a Scalable TD
+					li(data-tabcount="14"): a Article
+					li(data-tabcount="5"): a scalabletd2
+					li(data-tabcount="1"): a fooo
+					li(data-tabcount="7"): a heroku
 		
 		div.row
 			div.span4.box
