--- a/css/options.css
+++ b/css/options.css
@@ -1,6 +1,6 @@
 body {
 	font-size: 1rem;
-	min-width: 500px;
+	width: 500px;
 }
 
 h1 {
@@ -14,6 +14,9 @@ h2 {
 }
 
 html {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
 	font-size: 75%;
 }
 
@@ -45,5 +48,5 @@ section + section {
 }
 
 ul {
-	margin: 0rem 0rem 1rem 0rem;
+	margin: 0rem;
 }
